[gd_scene load_steps=3 format=3 uid="uid://dgy1v4slevvx6"]

[ext_resource type="FontFile" uid="uid://co1wjksp7j77j" path="res://assets/main_menu/Tiny5-Regular.ttf" id="1_civuf"]
[ext_resource type="Script" uid="uid://csafxnaa5gp5a" path="res://scripts/ui/lobby_browser/ServerCreatePoputInputButton.gd" id="1_pgv2c"]

[node name="ServerCreatePopup" type="PopupPanel"]
size = Vector2i(700, 301)
visible = true

[node name="ServerCreatePopupInputButton" type="Node" parent="."]
script = ExtResource("1_pgv2c")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 696.0
offset_bottom = 297.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LabelCreateServer" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_civuf")
theme_override_font_sizes/font_size = 64
text = "Create Server"
horizontal_alignment = 1

[node name="ServerName" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_civuf")
theme_override_font_sizes/font_size = 49
placeholder_text = "Server Name"

[node name="ServerPassword" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_civuf")
theme_override_font_sizes/font_size = 49
placeholder_text = "Server Password"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Cancel" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(172.83, 53.215)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/Cancel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_civuf")
theme_override_font_sizes/font_size = 50
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="Confirm" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(172.83, 53.215)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2/Confirm"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_civuf")
theme_override_font_sizes/font_size = 50
text = "Confirm"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/Cancel" to="ServerCreatePopupInputButton" method="_on_cancel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2/Confirm" to="ServerCreatePopupInputButton" method="_on_confirm_pressed"]
